--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*"],
+  "include": ["examples/**/*", "src/**/*"],
   "compilerOptions": {
-    "allowJs": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "sourceMap": true,
     "target": "ES2022",
     "module": "CommonJS",
     "strict": true,
